--- a/templates/post_templates/index.html
+++ b/templates/post_templates/index.html
@@ -3,62 +3,61 @@
 
 
 {% block body%}
-    <div class="container "> 
-        {%for post in posts%}
-            <div class="row justify-content-center">
-                <div class="col-md-5">
-                    <div class="img-thumbnail" style="margin: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.449);">
-                        <div class="caption ">
+    <div class="container justify-content-center">             
+        <div class="row row-cols-1 row-cols-md-3">
+            {% for post in posts %}
+            <div class="col">
+                <div class="img-thumbnail" style="margin: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.449);">
+                    <div class="caption">
+                        {% if post.image %}
+                            <img src="{{ post.image.url }}" alt="Post Image" class="img-thumbnail">
+                        {% endif %}
 
-                            
-                            {% if post.image %}
-                                <img src="{{ post.image.url }}" alt="Post Image" class="img-thumbnail" >
+                        <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h3>
+                        <h6>Yazar: {{ post.user.username }}</h6>
+
+                        <p>{{ post.desc|safe|linebreaks|truncatechars:150 }}</p>
+
+                        <small>{{ post.date }}</small>
+                        <hr>
+
+                        <p style="margin: 0.2rem;">
+                            <a href="{{ post.get_absolute_url }}" class="btn btn-primary" role="button">More</a>
+                            {% if request.user.is_authenticated %}
+                                <a href="{{ post.get_update_url }}" class="btn btn-primary" role="button">Update</a>
+                                <!-- Trigger unique modal -->
+                                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modal_{{ post.id }}">
+                                    Delete
+                                </button>
                             {% endif %}
+                        </p>
+                    </div>
+                </div>
+            </div>
 
-                            <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h3>
-
-                            <h6>Yazar: {{ post.user.username }}</h6>
-
-                            <p>{{ post.desc|safe|linebreaks|truncatechars:150 }}</p>
-
-                            <small>{{ post.date }}</small>
-
-                            <hr>
-
-                            <p style="margin: 0.2rem;">
-                                <a href="{{ post.get_absolute_url }}" class="btn btn-primary" role="button">More</a>
-                                {% if request.user.is_authenticated %}
-                                    <a href="{{ post.get_update_url }}" class="btn btn-primary" role="button">Update</a>
-                                    <a href="{{ post.get_delete_url }}" class="btn btn-danger" role="button" data-bs-toggle="modal" data-bs-target="#modal_deletion_warning">Delete</a>
-                                {% endif %}
-                            </p>
-                            
+            <!-- Modal (unique per post) -->
+            <div class="modal fade" id="modal_{{ post.id }}" tabindex="-1" aria-labelledby="modalLabel_{{ post.id }}" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalLabel_{{ post.id }}">Delete Post</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete this post?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                            {% if request.user.is_authenticated %}
+                                <a href="{{ post.get_delete_url }}" class="btn btn-danger" role="button">Delete</a>
+                            {% endif %}
                         </div>
                     </div>
-            </div>
-
-
-            <!-- Modal -->
-            <div class="modal fade" id="modal_deletion_warning" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Delete Post</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Are you sure you want to delete this post
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
-                    {% if request.user.is_authenticated %}
-                        <a href="{{ post.get_delete_url }}" class="btn btn-danger" role="button">Delete</a>
-                    {% endif %}
-                </div>
                 </div>
             </div>
-            </div>
-        {%endfor%}
+            {% endfor %}
+        </div>
+    </div>
 
         <div class="pagination justify-content-center">
             <span class="step-links">
