--- a/templates/header_search.html
+++ b/templates/header_search.html
@@ -28,8 +28,8 @@
                 <li class="nav-item"><a class="nav-link text-light" href="{% url 'accounts:signin' %}">Sign in</a></li>
             {% endif %}
             <li class="nav-item"><a class="nav-link text-light" href="{% url 'post:index' %}">Blog</a></li>
-            <li class="nav-item"><a class="nav-link text-light" href="#">About us</a></li>
-            <li class="nav-item"><a class="nav-link text-light" href="#">Contacts</a></li>
+            <li class="nav-item"><a class="nav-link text-light" href="{% url 'post:about'%}">About us</a></li>
+            <li class="nav-item"><a class="nav-link text-light" href="{% url 'post:contact'%}">Contacts</a></li>
             </ul>
         </div>
     </div>
