fixed clickable post to not override buttons and fixed the home page posts

--- a/templates/home_templates/popular_post.html
+++ b/templates/home_templates/popular_post.html
@@ -1,17 +1,26 @@
 {% block body%}
-<div class="img-thumbnail" style="margin: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.449);">
-    <div class="caption ">
-        {% if post.image %}
-            <img src="{{ post.image.url }}" alt="Post Image" class="img-thumbnail" >
-        {% endif %}
+<div class="img-thumbnail" style="margin: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.449); position: relative;">
 
-        <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h3>
+        <div class="caption " style="height: 100%; overflow: hidden;">
+            <div style="position: relative;">
+                    <a href="{{ post.get_absolute_url }}" ><span class="div_link" ></span></a>
 
-        <h6>Yazar: {{ post.user.username }}</h6>
+                {% if post.image %}
+                    <img src="{{ post.image.url }}" alt="Post Image" class="img-thumbnail" style="max-height: 100px;">
+                {% endif %}
 
-        <p>{{ post.desc|safe|linebreaks|truncatechars:150 }}</p>
+                <h3 class="post_title">{{ post.title }}<h6 class="post_title">Yazar: {{ post.user.username }}</h6></h3>
+                <hr>
+                <p>{{ post.desc|safe|linebreaks|truncatechars:150 }}</p>
 
-        <small>{{ post.date }}</small>
+                
+                <hr>
+            </div>
+
+          <p style="margin: 0.2rem;">
+            <a href="{{ post.get_absolute_url }}" class="btn btn-primary button_shadow" role="button">More</a>
+            <small>{{ post.date }}</small>  
+        </p>
     </div>
 </div>
 
