--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,11 @@ body{
     border-color: rgb(100, 100, 100);
 }
 
+.btn-primary:active{
+    background-color: rgb(123, 123, 123) !important;
+    border-color: rgb(145, 145, 145) !important; 
+}
+
 .div_link{ 
   position:absolute; 
   width:100%;
