--- a/templates/account_templates/form.html
+++ b/templates/account_templates/form.html
@@ -12,7 +12,7 @@
                 <hr>
                 {% csrf_token %}
                 {{ form|crispy }}
-                <input class="btn btn-primary"type="submit" value="Enter">
+                <input class="btn btn-primary button_shadow" type="submit" value="Enter">
             </form>
         </div>
     </div>
