--- a/templates/post_templates/index.html
+++ b/templates/post_templates/index.html
@@ -6,7 +6,7 @@
     <div class="container">             
         <div class="row row-cols-1 row-cols-md-3">
             {% for post in posts %}
-            <div class="col" style="display: flex;">
+            <div class="col">
                 <div class="img-thumbnail post_body">
 
                     <div class="caption " style="height: 100%; overflow: hidden;">
@@ -21,7 +21,7 @@
                             <hr>
                             <p>{{ post.desc|safe|linebreaks|truncatechars:150 }}</p>
 
-                            
+
                             <hr>
                         </div>
 
