--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,6 +29,16 @@ body{
     transform: scale(1.3);
 }
 
+.nav-link{
+    transform: scale(1.00);
+    transition: all 100ms ease-out;
+}
+
+.nav-link:hover{
+    transform: scale(1.2);
+}
+
+
 .button_shadow{
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.449);
 }
