--- a/templates/header_search.html
+++ b/templates/header_search.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="banner">
     <div class="container">
 
-        <a href="{% url 'home' %}" class="navbar-brand text-light">Home</a>
+        <a href="{% url 'home' %}" class="nav-link navbar-brand text-light">Home</a>
 
         <!-- Arama Çubuğu -->
         <form class="d-flex ms-auto me-3" role="search" method="GET" action="">
