made home less emty?

--- a/templates/home_templates/home.html
+++ b/templates/home_templates/home.html
@@ -13,6 +13,19 @@
                 </div>
             {% endfor %}
 
+            <hr class="mt-3">
+
+            <div class="container justify-content-center">
+                <!--<h3 style="text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, beatae!</h3>-->
+
+                <div class="container mt-3">
+                    <div class="img-thumbnail post_body">
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde rerum eveniet, a ut quas quae reiciendis odit cumque ipsum, necessitatibus ex aliquam animi nostrum, doloribus nulla excepturi aliquid perferendis? Nemo, id! Mollitia inventore minima asperiores soluta! Quam officia, ex consectetur eum, excepturi nisi commodi possimus iure molestias tenetur perferendis facere assumenda veniam vel, sed id. Deleniti accusamus quos aliquid unde velit aperiam facilis praesentium cupiditate itaque totam, animi voluptas sunt quae consectetur! Fugit, quibusdam, iure magni est numquam perferendis repellat ducimus dolorem amet praesentium ut. Quibusdam adipisci nihil recusandae? Ullam doloremque harum enim incidunt aliquam ipsam alias atque, laboriosam doloribus!</h4>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <footer></footer>
     </div>
 {% endblock %}
