added upvotes to the home page

--- a/templates/home_templates/popular_post.html
+++ b/templates/home_templates/popular_post.html
@@ -14,16 +14,23 @@
                 <p>{{ post.desc|safe|linebreaks|truncatechars:150 }}</p>
 
             </div>
-
+            {% load static %}
             <div class="mt-auto">
                 <hr>
-                <a href="{{ post.get_absolute_url }}" class="btn btn-primary button_shadow" role="button">More</a>
+
                 {% if request.user.is_authenticated %}
+
+                    {% if post.id in upvoted_posts %}
+                        <a href="/{{post.id}}/upvote" role="button"><img class="scale-hover" src="{% static 'img/upvote_fill.png' %}" alt=""></a>{{post.upvotes}} |
+                    {% else %}
+                        <a href="/{{post.id}}/upvote" role="button"><img class="scale-hover" src="{% static 'img/upvote.svg' %}" alt=""></a>{{post.upvotes}} |
+                    {% endif %}
+
                     {% if post.user == request.user %}
                         <a href="{{ post.get_update_url }}" class="btn btn-primary button_shadow" role="button">Update</a>
                         <button type="button" class="btn btn-danger button_shadow" data-bs-toggle="modal" data-bs-target="#modal_{{ post.id }}">Delete</button>
                     {% endif %}
-                    <small>{{ post.date }}</small>
+                    <small>{{ post.date|timesince}}</small>
                 {% endif %}
             </div>
     </div>
