--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="banner">
     <div class="container">
 
-        <a href="{% url 'home' %}" class="nav-link navbar-brand text-light">Home</a>
+        <a href="/" class="nav-link navbar-brand text-light">Home</a>
 
         <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLinks" 
                 aria-controls="navbarLinks" aria-expanded="false" aria-label="Toggle navigation">
