--- a/templates/home_templates/popular_post.html
+++ b/templates/home_templates/popular_post.html
@@ -38,4 +38,24 @@
     </div>
 </div>
 
+<!-- Modal post delete -->
+<div class="modal fade" id="modal_{{ post.id }}" tabindex="-1" aria-labelledby="modalLabel_{{ post.id }}" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabel_{{ post.id }}">Delete Post</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this post?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary button_shadow" data-bs-dismiss="modal">No</button>
+                {% if request.user.is_authenticated %}
+                    <a href="{{ post.get_delete_url_home }}" class="btn btn-danger button_shadow" role="button">Delete</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock%}
