fixes #11: header needed correction

--- a/templates/header_search.html
+++ b/templates/header_search.html
@@ -1,7 +1,7 @@
 <!-- Navbar Start -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="banner">
     <div class="container">
-        <div class="d-flex sm -auto me-3">
+        <div class="d-flex sm-auto me-3">
             <a href="/" class="nav-link navbar-brand text-light">Home</a>
 
             <!-- Arama Çubuğu -->
@@ -12,16 +12,18 @@
                 <button class="btn btn-outline-light text-dark" style="background-color: rgb(224, 224, 224);" type="submit">Search</button>
                 </div>
             </form>
-        
 
-            <button class="navbar-toggler text-light" style="margin-left: 1rem;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLinks" 
-                    aria-controls="navbarLinks" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler text-light ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLinks" 
+                aria-controls="navbarLinks" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
         </div>
+
+        
         <!-- Temel Sayfalar -->
         <div class="collapse navbar-collapse" id="navbarLinks">
-            <ul class="nav d-flex justify-content-center">
+            <ul class="nav d-flex justify-content-start ms-auto    ">
                 {% if request.user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link text-light" href="{% url 'post:create' %}">Create</a></li>
                     <li class="nav-item"><a class="nav-link text-light" href="{% url 'accounts:logout' %}" data-bs-toggle="modal" data-bs-target="#modal_1">Logout</a></li>
@@ -32,6 +34,7 @@
                 <li class="nav-item"><a class="nav-link text-light" href="{% url 'post:index' %}">Blog</a></li>
                 <li class="nav-item"><a class="nav-link text-light" href="{% url 'post:about'%}">About us</a></li>
                 <li class="nav-item"><a class="nav-link text-light" href="{% url 'post:contact'%}">Contact</a></li>
+                <li class="nav-item"><a class="nav-link text-light" href="#">Profile</a></li>
             </ul>
         </div>
 
