--- a/templates/post_templates/detail.html
+++ b/templates/post_templates/detail.html
@@ -9,6 +9,12 @@
                 <div class="img-thumbnail" style="margin: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.449);">
                     <div class="caption " style="overflow: hidden;">
 
+                        {% if post.video %}
+                            <video controls>
+                                <source src="{{ post.video.url }}" alt="Post video" class="img-thumbnail">
+                            </video>
+                        {% endif %}
+
                         {% if post.image %}
                             <img src="{{ post.image.url }}" alt="Post Image" class="img-thumbnail">
                         {% endif %}
