Created the admin panel design and templates

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,12 @@ body{
     background-color: white;
 }
 
+.card{
+    margin: 10px;
+    padding: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.449);
+}
+
 .post_title{
     display: inline-block;
     margin-left: 0.5rem;
@@ -64,6 +70,35 @@ body{
 .btn-primary:hover{
     background-color: rgb(88, 88, 88);
     border-color: rgb(100, 100, 100);
+    transition: all 100ms ease-out;
+    transform: scale(1.03);
+}
+
+
+.btn-primary-2{
+    background-color: rgb(255, 210, 112);
+    border-color: rgb(255, 211, 90);
+    transition: all 100ms ease-out;
+    transform: scale(1.00);
+}
+
+.btn-primary-2:hover{
+    background-color: rgb(255, 140, 64);
+    border-color: rgb(255, 211, 90);
+    transition: all 100ms ease-out;
+    transform: scale(1.03);
+}
+
+.btn-primary-success{
+    background-color: #8de4ff;
+    border-color: rgb(90, 217, 255);
+    transition: all 100ms ease-out;
+    transform: scale(1.00);
+}
+
+.btn-primary-success:hover{
+    background-color: rgb(67, 202, 255);    
+    border-color: rgb(90, 217, 255);
     transition: all 100ms ease-out;
     transform: scale(1.03);
 }
