--- a/templates/header.html
+++ b/templates/header.html
@@ -15,7 +15,11 @@
                 <ul class="nav">
                     {% if request.user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link text-light" href="{% url 'post:create' %}">Create</a></li>
+                        
                         <li class="nav-item"><a class="nav-link text-light" href="{% url 'accounts:logout' %}" data-bs-toggle="modal" data-bs-target="#modal_1">Logout</a></li>
+                        {% if request.user.is_staff %}
+                            <li class="nav-item"><a class="nav-link text-light" href="{% url 'accounts:admin_panel' %}">Admin Panel</a></li>
+                        {% endif %}
                     {% else %}
                         <li class="nav-item"><a class="nav-link text-light" href="{% url 'accounts:login' %}">Login</a></li>
                         <li class="nav-item"><a class="nav-link text-light" href="{% url 'accounts:signin' %}">Sign in</a></li>
