--- a/templates/home_templates/home.html
+++ b/templates/home_templates/home.html
@@ -4,8 +4,8 @@
     <div class="container">
         <div class="row">
             
-            <h1>You are Signed in as {{account.name}}</h1>
-            <h4>Top 3 popular posts</h4>
+            <h1>You are Signed in as {{account.name}} | {% if request.user.is_staff %} Admin {% else %} User {% endif %}</h1>
+            <h3>Top 3 popular posts</h3>
 
             {% for post in popular_posts %}
                 <div class="col d-flex mt-3">
