--- a/templates/account_templates/admin_panel.html
+++ b/templates/account_templates/admin_panel.html
@@ -1,5 +1,5 @@
 
-{% extends 'base.html'%}
+{% extends 'base_search.html'%}
 {% block body %}
     <div class="container">
         <div class="row">
