--- a/templates/header_search.html
+++ b/templates/header_search.html
@@ -8,7 +8,7 @@
         
             <form class="mt-2" role="search" method="GET" action="">
                 <div class="input-group">
-                <input class="form-control" type="text" name="q" placeholder="Search on posts" value="{{ request.GET.q }}">
+                <input class="form-control" type="text" name="q" placeholder="Search" value="{{ request.GET.q }}">
                 <button class="btn btn-outline-light text-dark" style="background-color: rgb(224, 224, 224);" type="submit">Search</button>
                 </div>
             </form>
