--- a/templates/account_templates/admin_panel.html
+++ b/templates/account_templates/admin_panel.html
@@ -102,7 +102,7 @@
                                 <td>{{admin_data.email}}</td>
                                 <td>#{{admin_data.user.id}} {{admin_data.user}}</td>
                                 <td>
-                                    <a href="{{ admin_data.get_update_url }}" class="btn btn-primary-2 button_shadow" role="button">Modify</a>
+                                    <a href="{{ admin_data.get_modify_contact_adminpanel_url }}" class="btn btn-primary-2 button_shadow" role="button">Modify</a>
                                     <button type="button" class="btn btn-danger button_shadow" data-bs-toggle="modal" data-bs-target="#modal_{{ admin_data.id }}">Delete</button>
                                 </td>
                             </tr>
