--- a/templates/post_templates/index.html
+++ b/templates/post_templates/index.html
@@ -14,13 +14,6 @@
 
 
                         
-                        {% if post.video %}
-                            <video src="{{ post.video.url }}" alt="Post video" class="img-thumbnail" width="500" controls>
-                        {% endif %}
-
-                        {% if post.image %}
-                            <img src="{{ post.image.url }}" alt="Post Image" class="img-thumbnail" style="max-height: 100px;">
-                        {% endif %}
 
                         <h3 class="post_title">
                             {{ post.title }}
@@ -28,8 +21,23 @@
                         <h6 class="post_title">
                             OP: {{ post.user.username }}
                         </h6>
-                        <hr>
-                        <p>{{ post.desc|safe|linebreaks|truncatechars:150 }}</p>
+                        <hr>                        
+                        <div>
+
+                            {% if post.video %}
+                                <video src="{{ post.video.url }}" alt="Post video" class="img-thumbnail" width="500" controls></video>
+                                {% if post.image%}
+                                    <small>Show More</small>
+                                {% endif %}
+                            {% else %}                            
+                                {% if post.image%}
+                                    <img src="{{ post.image.url }}" alt="Post Image" class="img-thumbnail" style="max-height: 200px;">
+                                {% endif %}
+                            {% endif %}
+
+                            <p>{{ post.desc|safe|linebreaks|truncatechars:150 }}</p>
+                        
+                        </div>
                         
                     </div>
 
