--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,7 +57,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    background: linear-gradient(#ffffff00, #00000065);
+    background: linear-gradient(#ffffff00, #ffffff);
     width: 100%;
     text-align: center;
 }
