--- a/templates/account_templates/admin_panel.html
+++ b/templates/account_templates/admin_panel.html
@@ -153,7 +153,7 @@
                 </table>
             </div>
 
-            <div class="paginator-fixed">
+            <div class="paginator-fixed"> <!-- also adds paginator gradient -->
                 <div class="pagination justify-content-center mt-5 m-4">
                     <span class="step-links">
 
