--- a/templates/base_search.html
+++ b/templates/base_search.html
@@ -14,6 +14,7 @@ body{
     background-size: cover;
     background-repeat: no-repeat;   
     background-position: center 10rem;
+    padding-bottom: 3rem;
 }
 </style>
 <body>
