--- a/templates/post_templates/index.html
+++ b/templates/post_templates/index.html
@@ -95,7 +95,7 @@
         </div>
     </div>
 
-        <div class="paginator-blog">
+        <div class="paginator-blog paginator-fixed">
             <div class="pagination justify-content-center mt-5 m-4">
                 <span class="step-links">
 
