--- a/templates/post_templates/index.html
+++ b/templates/post_templates/index.html
@@ -14,7 +14,7 @@
 
 
                         
-                        <div class="card-header">
+                        <div class="card-header mb-2">
                             <h3 class="post_title">
                                 {{ post.title }}
                             </h3>
@@ -25,10 +25,10 @@
                         <div>
 
                             {% if post.video %}
-                                <video src="{{ post.video.url }}" alt="Post video" class="img-thumbnail mt-2" width="500" controls></video>
+                                <video src="{{ post.video.url }}" alt="Post video" class="img-thumbnail" width="500" controls></video>
                             {% else %}                            
                                 {% if post.image%}
-                                    <img src="{{ post.image.url }}" alt="Post Image" class="img-thumbnail mt-2" style="max-height: 200px;">
+                                    <img src="{{ post.image.url }}" alt="Post Image" class="img-thumbnail" style="max-height: 200px;">
                                 {% endif %}
                             {% endif %}
 
